# lead-entry-guard

./: .gitignore  Dockerfile  LICENSE.txt  README.md  conftest.py  docker-compose.yml  pyproject.toml
docs/architecture/: pipeline.md
docs/architecture/adr/: adr-000-template.md  adr-001-recovery-path-store-contract.md  adr-002-degraded-mode-policy-separation.md  adr-003-bloom-anti-corruption-layer.md  adr-004-idempotency-snapshot-contract.md
docs/testing/: benchmark_100k_baseline.md  hero-benchmark-100k.md  hero-test-recovery.md
load_tests/: generate_dataset.py  generate_report.py  hero_benchmark.py  load_tests_README.md  run_scenario.py  scale_scenarios.py
src/lead_entry_guard/: __init__.py
src/lead_entry_guard/api/: app.py
src/lead_entry_guard/config/: settings.py  tenant.py  versioning.py
src/lead_entry_guard/core/: exceptions.py  models.py  pipeline.py
src/lead_entry_guard/fingerprint/: builder.py
src/lead_entry_guard/lookup/: bloom.py  duplicate.py  redis_store.py
src/lead_entry_guard/normalization/: normalizer.py
src/lead_entry_guard/policies/: engine.py  shadow.py
src/lead_entry_guard/reconciliation/: loop.py
src/lead_entry_guard/security/: hmac_keys.py  (+1 more)
synthetic_data/: analyze_benchmark_accuracy.py  run_pipeline_benchmark.py
synthetic_data/generator/: build_dataset.py  enums.py  models.py  mutations.py
tests/chaos/: test_multi_failure.py
tests/fixtures/: common.py
tests/integration/: test_pipeline.py
tests/resilience/: test_single_failure.py
tests/unit/: conftest.py  test_fingerprint.py  test_normalization.py  test_policy.py
(+2 files in other folders)
