[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lead-entry-guard"
version = "4.0.0"
description = "Real-time ingestion gateway for CRM and marketing pipelines"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "redis[hiredis]>=5.0.4",
    "pybloom-live>=4.0.0",
    "hvac>=2.1.0",
    "boto3>=1.34.0",
    "httpx>=0.27.0",
    "phonenumbers>=8.13.0",
    "email-validator>=2.1.0",
    "statsd>=4.0.1",
    "structlog>=24.2.0",
    "tenacity>=8.3.0",
    "python-jose[cryptography]>=3.3.0",
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "fakeredis>=2.23.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
